# ansible-infra

./: .ansible-lint  .gitignore  .gitlab-ci-full.yml  .gitlab-ci-minimal.yml  .gitlab-ci-working.yml  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  DISCOVERY_WORKFLOW.md  DOCKER_SERVICES.md  LICENSE  Makefile  NEW-ARCHITECTURE.md  PHASE_III_PLAN.md  README.md  SIMPLIFICATION_RECOMMENDATIONS.md  STYLE-GUIDE.md  TESTING.md  TESTING_STRATEGY.md  ansible-ci.cfg  debug-discovery.yml  galaxy.yml  idea list.md  justfile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.yml  temp-discovery-inventory.yml  test-additive-vars.yml  test-altra-discovery.yml  test-altra-inventory.yml  test-discovery-simple.yml  test-discovery.yml  test-dotfiles.yml  test-local-discovery.yml  (+1 more)
.ci/: Dockerfile.archlinux
.claude/: README.md
.gitlab/: README.md  test-matrix.yml
defaults/: main.yml
docs/: CI_FAILURES_FIX_PLAN.md  DEPENDENCY_DOCUMENTATION_STANDARD.md  DEVELOPMENT_WORKFLOW.md  SOFTWARE_REQUIREMENTS_DOCUMENT.md  TAGS-REFERENCE.md  TEST_REQUIREMENTS_DOCUMENT.md  conf.py  gitlab-runner-configuration.md  handling-third-party-packages.md  index.rst  installation.rst  molecule-testing.md  quickstart.rst  role_readme_template.md  v1.2.5-prioritization.md  vault-secrets-guide.md
examples/: new-architecture-example.yml
group_vars/: all.yml.example
localhost-additive-discovery/: inventory.yml
meta/: runtime.yml
playbooks/: README.md  configure_system.yml  example-host.yml  master_vars_list.md  run-discovery.yml  setup-new-machine.yml  setup-server-example.yml  setup-workstation-example.yml  test-discovery-dryrun.yml  test-hostname-config.yml  workstation.yml  (+2 more)
(+992 files in other folders)
